--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="header__prompt">
-                    <a class="header__prompt-link" href="">Листайте вниз</a>
+                    <a class="header__prompt-link" href="">Листайте вниз <span><img src="images/arrow-down.svg" alt=""></span></a>
                 </div>
             </div>
         </div>
