--- a/app/index.html
+++ b/app/index.html
@@ -17,78 +17,90 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <nav class="header__menu">
-                    <ul class="header__menu-list">
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">О нас</a>
-                        </li>
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">Платформа</a>
-                        </li>
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">Курсы</a>
-                        </li>
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">Лекции</a>
-                        </li>
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">Тарифы</a>
-                        </li>
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">Блог</a>
-                        </li>
-                        <li class="header__menu-item">
-                            <a href="" class="header__menu-link">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div class="header__burger-menu">
+                    <nav class="header__menu">
+                        <ul class="header__menu-list">
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">О нас</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">Платформа</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">Курсы</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">Лекции</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">Тарифы</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">Блог</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="" class="header__menu-link">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__burger-btn">
+                    <span></span>
+                </div>
             </div>
 
-            <div class="header__content">
-                <div class="header__social">
-                    <ul class="header__social-list">
-                        <li class="header__social-item">
-                            <a class="header__social-link" href="">
-                                <img class="header__socaial-icon" src="images/social-facebook-icon.svg" alt="social-facebook-icon">
-                            </a>
-                        </li>
-                        <li class="header__social-item">
-                            <a class="header__social-link" href="">
-                                <img class="header__socaial-icon" src="images/social-vk-icon.svg" alt="social-vk-icon">
-                            </a>
-                        </li>
-                        <li class="header__social-item">
-                            <a class="header__social-link" href="">
-                                <img class="header__socaial-icon" src="images/social-instagram-icon.svg" alt="social-instagram-icon">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
 
-                <div class="header__info">
-                    <div class="logo">
-                        <a class="logo__link" href="">
-                            <img class="header__img" src="images/logo.svg" alt="logo">
+        </div>
+
+        <div class="header__content">
+            <div class="header__social">
+                <ul class="header__social-list">
+                    <li class="header__social-item">
+                        <a class="header__social-link" href="">
+                            <img class="header__socaial-icon" src="images/social-facebook-icon.svg"
+                                alt="social-facebook-icon">
                         </a>
-                    </div>
-
-                    <h1 class="header__title">
-                        Образовательная
-                        онлайн-платформа
-                    </h1>
-
-                    <p class="header__text">
-                        Курсы и видео-лекции по дизайну, копирайтингу,
-                        SMM, таргету и многим другим направлениям
-                    </p>
-
-                    <a class="header__btn" href="">Все направления</a>
-                </div>
-
-                <div class="header__prompt">
-                    <a class="header__prompt-link" href="">Листайте вниз <span><img src="images/arrow-down.svg" alt=""></span></a>
-                </div>
+                    </li>
+                    <li class="header__social-item">
+                        <a class="header__social-link" href="">
+                            <img class="header__socaial-icon" src="images/social-vk-icon.svg" alt="social-vk-icon">
+                        </a>
+                    </li>
+                    <li class="header__social-item">
+                        <a class="header__social-link" href="">
+                            <img class="header__socaial-icon" src="images/social-instagram-icon.svg"
+                                alt="social-instagram-icon">
+                        </a>
+                    </li>
+                </ul>
             </div>
+
+            <div class="header__info">
+                <div class="logo">
+                    <a class="logo__link" href="">
+                        <img class="header__img" src="images/logo.svg" alt="logo">
+                    </a>
+                </div>
+
+                <h1 class="header__title">
+                    Образовательная
+                    онлайн-платформа
+                </h1>
+
+                <p class="header__text">
+                    Курсы и видео-лекции по дизайну, копирайтингу,
+                    SMM, таргету и многим другим направлениям
+                </p>
+
+                <a class="header__btn" href="">Все направления</a>
+            </div>
+
+            <div class="header__prompt">
+                <a class="header__prompt-link" href="">Листайте вниз <span><img src="images/arrow-down.svg"
+                            alt=""></span>
+                </a>
+            </div>
+        </div>
         </div>
     </header>
 
