--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,59 @@
         </div>
     </header>
 
+    <main class="main">
+        <section class="statistic">
+            <div class="container">
+                <div class="statistic__content">
+                    <div class="statistic__wreapper">
+                        <div class="statistic__item">
+                            <p class="statistic__num">
+                                100+
+                            </p>
+
+                            <p class="statistic__description">
+                                теоретических и практических
+                                курсов для разного уровня
+                            </p>
+                        </div>
+                        <div class="statistic__item">
+                            <p class="statistic__num">
+                                3 000
+                            </p>
+
+                            <p class="statistic__description">
+                                часов видео-лекций и вебинаров
+                                от лучших преподавателей
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="statistic__wreapper">
+                        <div class="statistic__item">
+                            <p class="statistic__num">
+                                15
+                            </p>
+
+                            <p class="statistic__description">
+                                направлений обучения востребованным профессиям
+                            </p>
+                        </div>
+                        <div class="statistic__item">
+                            <p class="statistic__num">
+                                2 000
+                            </p>
+
+                            <p class="statistic__description">
+                                учеников уже занимаются
+                                на нашей платформе
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="js/main.min.js"></script>
 </body>
 
