--- a/app/index.html
+++ b/app/index.html
@@ -108,14 +108,13 @@
         <section class="statistic">
             <div class="container">
                 <div class="statistic__content">
-                    <div class="statistic__wreapper">
                         <div class="statistic__item">
                             <p class="statistic__num">
                                 100+
                             </p>
 
                             <p class="statistic__description">
-                                теоретических и практических
+                                теоретических и практических <br>
                                 курсов для разного уровня
                             </p>
                         </div>
@@ -125,20 +124,17 @@
                             </p>
 
                             <p class="statistic__description">
-                                часов видео-лекций и вебинаров
-                                от лучших преподавателей
+                                часов видео-лекций и вебинаров <br>
+                                от лучших преподавателей 
                             </p>
                         </div>
-                    </div>
-
-                    <div class="statistic__wreapper">
                         <div class="statistic__item">
                             <p class="statistic__num">
                                 15
                             </p>
 
                             <p class="statistic__description">
-                                направлений обучения востребованным профессиям
+                                направлений обучения <br> востребованным профессиям
                             </p>
                         </div>
                         <div class="statistic__item">
@@ -147,11 +143,10 @@
                             </p>
 
                             <p class="statistic__description">
-                                учеников уже занимаются
+                                учеников уже занимаются <br>
                                 на нашей платформе
                             </p>
-                        </div>
-                    </div>
+                        </div
                 </div>
             </div>
         </section>
