add html section (team)

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,6 @@
                         <img class="header__img" src="images/logo.svg" alt="logo">
                     </a>
                 </div>
-
                 <h1 class="header__title">
                     Образовательная
                     онлайн-платформа
@@ -92,7 +91,7 @@
                     SMM, таргету и многим другим направлениям
                 </p>
 
-                <a class="header__btn" href="">Все направления</a>
+                <a class="section__btn" href="">Все направления</a>
             </div>
 
             <div class="header__prompt">
@@ -108,48 +107,118 @@
         <section class="statistic">
             <div class="container">
                 <div class="statistic__content">
-                        <div class="statistic__item">
-                            <p class="statistic__num">
-                                100+
-                            </p>
+                    <div class="statistic__item">
+                        <p class="statistic__num">
+                            100+
+                        </p>
 
-                            <p class="statistic__description">
-                                теоретических и практических <br>
-                                курсов для разного уровня
-                            </p>
-                        </div>
-                        <div class="statistic__item">
-                            <p class="statistic__num">
-                                3 000
-                            </p>
+                        <p class="statistic__description">
+                            теоретических и практических <br>
+                            курсов для разного уровня
+                        </p>
+                    </div>
+                    <div class="statistic__item">
+                        <p class="statistic__num">
+                            3 000
+                        </p>
 
-                            <p class="statistic__description">
-                                часов видео-лекций и вебинаров <br>
-                                от лучших преподавателей 
-                            </p>
-                        </div>
-                        <div class="statistic__item">
-                            <p class="statistic__num">
-                                15
-                            </p>
+                        <p class="statistic__description">
+                            часов видео-лекций и вебинаров <br>
+                            от лучших преподавателей
+                        </p>
+                    </div>
+                    <div class="statistic__item">
+                        <p class="statistic__num">
+                            15
+                        </p>
 
-                            <p class="statistic__description">
-                                направлений обучения <br> востребованным профессиям
-                            </p>
-                        </div>
-                        <div class="statistic__item">
-                            <p class="statistic__num">
-                                2 000
-                            </p>
+                        <p class="statistic__description">
+                            направлений обучения <br> востребованным профессиям
+                        </p>
+                    </div>
+                    <div class="statistic__item">
+                        <p class="statistic__num">
+                            2 000
+                        </p>
 
-                            <p class="statistic__description">
-                                учеников уже занимаются <br>
-                                на нашей платформе
-                            </p>
-                        </div
+                        <p class="statistic__description">
+                            учеников уже занимаются <br>
+                            на нашей платформе
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
+
+        <section class="team">
+            <div class="container">
+                <div class="team__wrapper">
+                    <div class="team__info">
+                        <h3 class="team__title">
+                            Учитесь у лучших
+                        </h3>
+
+                        <p class="team__text">
+                            Наши преподаватели – профессионалы, которые добились успеха в своей области. Лид-дизайнеры
+                            известных студий, маркетологи крупнейших компаний, редакторы популярных медиа: получайте
+                            опыт из первых рук, в любое время.
+                        </p>
+                        <p class="team__text">
+                            Кураторы курсов – наши лучшие выпускники, будут помогать и поддерживать вас на протяжении
+                            всего обучения.
+                        </p>
+
+                        <a class="section__btn" href="">Все преподаватели</a>
+                    </div>
+
+                    <div class="team__images">
+                        <div class="team__images-item">
+                            <img src="images/team__img 1.png" alt="">
+
+                            <p class="team__item-description">
+                                Катя, ведущий дизайнер TailGroup
+                            </p>
+                        </div>
+                        <div class="team__images-item">
+                            <img src="images/team__img 2.png" alt="">
+
+                            <p class="team__item-description">
+                                Марина, маркетолог Headers Market
+                            </p>
+                        </div>
+                        <div class="team__images-item">
+                            <img src="images/team__img 3.png" alt="">
+
+                            <p class="team__item-description">
+                                Сава, PR-менеджер Central Media
+                            </p>
+                        </div>
+                        <div class="team__images-item">
+                            <img src="images/team__img 4.png" alt="">
+
+                            <p class="team__item-description">
+                                Паша, основатель LeadCompany
+                            </p>
+                        </div>
+                        <div class="team__images-item">
+                            <img src="images/team__img 5.png" alt="">
+
+                            <p class="team__item-description">
+                                Саша, главный редактор Just Journal
+                            </p>
+                        </div>
+                        <div class="team__images-item">
+                            <img src="images/team__img 6.png" alt="">
+
+                            <p class="team__item-description">
+                                Лёня, ведущий разработчик Ymail
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="js/main.min.js"></script>
