add css  section (team)

--- a/app/index.html
+++ b/app/index.html
@@ -176,42 +176,42 @@
                             <img src="images/team__img 1.png" alt="">
 
                             <p class="team__item-description">
-                                Катя, ведущий дизайнер TailGroup
+                                Катя, ведущий дизайнер <br> TailGroup
                             </p>
                         </div>
                         <div class="team__images-item">
                             <img src="images/team__img 2.png" alt="">
 
                             <p class="team__item-description">
-                                Марина, маркетолог Headers Market
+                                Марина, маркетолог <br> Headers Market
                             </p>
                         </div>
                         <div class="team__images-item">
                             <img src="images/team__img 3.png" alt="">
 
                             <p class="team__item-description">
-                                Сава, PR-менеджер Central Media
+                                Сава, PR-менеджер <br> Central Media
                             </p>
                         </div>
                         <div class="team__images-item">
                             <img src="images/team__img 4.png" alt="">
 
                             <p class="team__item-description">
-                                Паша, основатель LeadCompany
+                                Паша, основатель <br> LeadCompany
                             </p>
                         </div>
                         <div class="team__images-item">
                             <img src="images/team__img 5.png" alt="">
 
                             <p class="team__item-description">
-                                Саша, главный редактор Just Journal
+                                Саша, главный редактор <br>  Just Journal
                             </p>
                         </div>
                         <div class="team__images-item">
                             <img src="images/team__img 6.png" alt="">
 
                             <p class="team__item-description">
-                                Лёня, ведущий разработчик Ymail
+                                Лёня, ведущий <br> разработчик Ymail
                             </p>
                         </div>
                     </div>
