--- a/app/index.html
+++ b/app/index.html
@@ -219,6 +219,30 @@
             </div>
         </section>
 
+        <section class="offer">
+            <div class="container">
+                <div class="offer__inner">
+                    <div class="offer__img">
+                        <img src="images/offer__img 1.png" alt="">
+                    </div>
+
+                    <div class="offer__info">
+                        <h2 class="offer__title">
+                            Выбирайте свой формат обучения
+                        </h2>
+
+                        <p class="offer__text">
+                            Смотрите видео-лекции в удобное для вас время, обучайтесь на тренажере, участвуйте в интенсивных воркшопах
+                            с командой или проходите курс с гибким расписанием.
+                            На нашей платформе каждый найдет подходящий формат.
+                        </p>
+
+                        <a class="section__btn" href="">Все курсы</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="js/main.min.js"></script>
