add html section (cours)

--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,7 @@
                             <img src="images/team__img 5.png" alt="">
 
                             <p class="team__item-description">
-                                Саша, главный редактор <br>  Just Journal
+                                Саша, главный редактор <br> Just Journal
                             </p>
                         </div>
                         <div class="team__images-item">
@@ -232,13 +232,59 @@
                         </h2>
 
                         <p class="offer__text">
-                            Смотрите видео-лекции в удобное для вас время, обучайтесь на тренажере, участвуйте в интенсивных воркшопах
+                            Смотрите видео-лекции в удобное для вас время, обучайтесь на тренажере, участвуйте в
+                            интенсивных воркшопах
                             с командой или проходите курс с гибким расписанием.
                             На нашей платформе каждый найдет подходящий формат.
                         </p>
 
                         <a class="section__btn" href="">Все курсы</a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="cours">
+            <div class="container">
+                <div class="cours__head">
+                    <h3 class="cours__title">
+                        Популярные курсы    
+                    </h3>
+                </div>
+
+                <div class="cours__content">
+                    <div class="cours__item">
+                        <img class="cours__img" src="images/cours__img 1.png" alt="">
+
+                        <p class="cours__description">
+                            Motion design
+                        </p>
+                    </div>
+                    <div class="cours__item">
+                        <img class="cours__img" src="images/cours__img 2.png" alt="">
+
+                        <p class="cours__description">
+                            Таргет в Instagram
+                        </p>
+                    </div>
+                    <div class="cours__item">
+                        <img class="cours__img" src="images/cours__img 3.png" alt="">
+
+                        <p class="cours__description">
+                            Эффектные презентации
+                        </p>
+                    </div>
+                    <div class="cours__item">
+                        <img class="cours__img" src="images/cours__img 4.png" alt="">
+
+                        <p class="cours__description">
+                            SMM-стратегия
+                        </p>
+                    </div>
+                </div>
+
+                <div class="cours__btn">
+                    <a class="section__btn" href="">Все курсы</a>
                 </div>
             </div>
         </section>
