add  section (offer__two)

--- a/app/index.html
+++ b/app/index.html
@@ -248,7 +248,7 @@
             <div class="container">
                 <div class="cours__head">
                     <h3 class="cours__title">
-                        Популярные курсы    
+                        Популярные курсы
                     </h3>
                 </div>
 
@@ -285,6 +285,26 @@
 
                 <div class="cours__btn">
                     <a class="section__btn" href="">Все курсы</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="offer  offer__two">
+            <div class="container">
+                <div class="offer__inner">
+                    <div class="offer__info">
+                        <h2 class="offer__title">
+                            Присоединяйтесь
+                            к E-Mentor сейчас
+                        </h2>
+
+                        <p class="offer__text">
+                            Выберите подходящий тариф и формат обучения, пройдите 2 урока и мы подарим вам
+                            дополнительные лекции по любому направлению бесплатно!
+                        </p>
+
+                        <a class="section__btn" href="">Выбрать тариф</a>
+                    </div>
                 </div>
             </div>
         </section>
