--- a/app/index.html
+++ b/app/index.html
@@ -343,82 +343,86 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__item">
-                    <nav class="footer__menu">
-                        <ul class="footer__menu-list">
-                            <li class="footer__menu-title">
-                                Обучение
-                            </li>
 
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Курсы</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Вебинары</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Тренажеры</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Воркшопы</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="footer__item">
-                    <nav class="footer__menu">
-                        <ul class="footer__menu-list">
-                            <li class="footer__menu-title">
-                                О нас
-                            </li>
+                <div class="footer__wrapper">
+                    <div class="footer__item">
+                        <nav class="footer__menu">
+                            <ul class="footer__menu-list">
+                                <li class="footer__menu-title">
+                                    Обучение
+                                </li>
 
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">О платформе</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Преподаватели</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Тарифы</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Отзывы</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="footer__item">
-                    <nav class="footer__menu">
-                        <ul class="footer__menu-list">
-                            <li class="footer__menu-title">
-                                Контакты
-                            </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Курсы</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Вебинары</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Тренажеры</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Воркшопы</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__item">
+                        <nav class="footer__menu">
+                            <ul class="footer__menu-list">
+                                <li class="footer__menu-title">
+                                    О нас
+                                </li>
 
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Связаться с нами</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Консультация</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Реквизиты</a>
-                            </li>
-                            <li class="footer__menu-item">
-                                <a class="footer__menu-link" href="">Поддержка</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="footer__item">
-                    <p class="footer__menu-title">
-                        Возникли вопросы?
-                    </p>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">О платформе</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Преподаватели</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Тарифы</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Отзывы</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__item">
+                        <nav class="footer__menu">
+                            <ul class="footer__menu-list">
+                                <li class="footer__menu-title">
+                                    Контакты
+                                </li>
 
-                    <p class="footer__mail">
-                        Напишите нам на почту <span> <a href="">education@ementor.info</a></span>
-                        
-                    </p>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Связаться с нами</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Консультация</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Реквизиты</a>
+                                </li>
+                                <li class="footer__menu-item">
+                                    <a class="footer__menu-link" href="">Поддержка</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__item">
+                        <p class="footer__menu-title">
+                            Возникли вопросы?
+                        </p>
+
+                        <p class="footer__mail">
+                            Напишите нам на почту <span> <a href="">education@ementor.info</a></span>
+
+                        </p>
+                    </div>
                 </div>
+
             </div>
 
             <div class="footer__copyright">
